<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InicioActivity">
    <item
        android:id="@+id/action_cambiarclave"
        android:orderInCategory="200"
        android:title="@string/action_cambiarclave"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exportar"
        android:orderInCategory="300"
        android:title="@string/action_exportar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exportar1"
        android:orderInCategory="400"
        android:title="@string/action_exportar1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_importar"
        android:orderInCategory="500"
        android:title="@string/action_importarBD"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_salir"
        android:orderInCategory="600"
        android:title="@string/action_salir"
        android:icon="@drawable/boton_salir"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_acerca_de"
        android:orderInCategory="700"
        android:icon="@drawable/boton_acerca_de"
        android:title="@string/action_acerca_de"
        app:showAsAction="ifRoom|withText"/>
</menu>
