<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/degradado1">

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <!-- Contenido de enmedio de la pantalla -->

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/Layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/TextViewID0"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/editar_id"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout2"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/TextViewCategoria"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_categoria"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textViewCategoria_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/combo_Categoria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout3"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_nombre"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/Layout44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout4"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewUsuario"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_usuario"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextUsuario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ToggleButton
                    android:id="@+id/toggleButtonUsuario"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:textOn=""
                    android:textOff=""
                    android:textAppearance="?android:textAppearanceSmall"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout44"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewClave"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_clave"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextClave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ToggleButton
                    android:id="@+id/toggleButtonClave"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:textOn=""
                    android:textOff=""
                    android:textAppearance="?android:textAppearanceSmall"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout4444"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout444"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewURL"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_url"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout4444"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewPreguntaSeguridad"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_pregunta_seguridad"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextPreguntaSeguridad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout5"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewRespuestaSeguridad"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_respuesta_seguridad"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextRespuestaSeguridad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout6"
                android:layout_marginTop="4dp" >

                <TextView
                    android:id="@+id/textViewNotas"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/agregar_notas"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editTextNotas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Layout66"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/buttonGuardar"
                    android:layout_width="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/selector_boton"
                    android:drawableLeft="@drawable/boton_guardar"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/guardar"
                    android:textStyle="bold"
                    android:layout_weight="1.0"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/buttonCancelar"
                    android:layout_width="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/selector_boton"
                    android:drawableLeft="@drawable/boton_cancelar"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/cancelar"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_weight="1.0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
